# Vehicle-Computing-Simulator

./: README.md
img_processing/: CMakeLists.txt  create_json.sh  data.json
img_processing/include/: alert.h  alerter.h  detector.h  distance.h  dynamic_tracker.h  lane_detector.h  log_manager.h  manager.h  object_information_struct.h  regression.h  sun_detector.h  velocity.h
img_processing/src/: alert.cpp  alerter.cpp  detector.cpp  distance.cpp  dynamic_tracker.cpp  lane_detector.cpp  log_manager.cpp  main.cpp  manager.cpp  sun_detector.cpp  velocity.cpp
img_processing/tests/: test_detector.cpp  test_distance.cpp  test_dynamic_tracker.cpp  test_lane_detector.cpp  test_manager.cpp  test_serialize.cpp  test_sun_detector.cpp  test_velocity.cpp
